--- a/index.html
+++ b/index.html
@@ -3,46 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>braybrays soundboard</title>
+    <title>braybray's soundboard</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap');
 
+        /* Moving Gradient Background */
         body {
-            background-color: black;
+            background: linear-gradient(-45deg, #1a001a, #3d003d, #000, #200020);
+            background-size: 400% 400%;
+            animation: gradientMove 10s infinite alternate;
             margin: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            overflow: hidden;
+        }
+
+        @keyframes gradientMove {
+            0% { background-position: 0% 50%; }
+            100% { background-position: 100% 50%; }
         }
 
         /* Header */
         .header {
-            width: 100%;
-            background-color: #333;
             color: white;
             text-align: center;
-            padding: 20px;
             font-family: 'Bowlby One', cursive;
             font-size: 28px;
+            padding: 20px;
+            transition: transform 0.3s ease;
+        }
+
+        /* Header Hover Zoom Effect */
+        .header:hover {
+            transform: scale(1.1);
         }
 
         /* Button Grid */
         .container {
             display: grid;
-            grid-template-columns: repeat(2, auto);
+            grid-template-columns: repeat(5, auto);
             gap: 20px;
-            margin-top: 30px;
+            margin-top: 20px;
         }
 
-        /* Circular Buttons */
+        /* Circular Buttons with Custom Images */
         .button {
             width: 80px;
             height: 80px;
             border-radius: 50%;
             border: 3px solid white;
-            background-image: url('https://your-image-url-here.com/image.jpg'); /* Replace with your image */
             background-size: cover;
             background-position: center;
             cursor: pointer;
@@ -64,20 +76,20 @@
 <body>
 
     <!-- Header -->
-    <div class="header">braybrays soundboard</div>
+    <div class="header">braybray's soundboard</div>
 
     <!-- Button Grid -->
     <div class="container">
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
+        <button class="button" style="background-image: url('https://your-image-url-1.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-2.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-3.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-4.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-5.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-6.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-7.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-8.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-9.com');"></button>
+        <button class="button" style="background-image: url('https://your-image-url-10.com');"></button>
     </div>
 
 </body>
